--- a/tango_with_django_project/templates/rango/about.html
+++ b/tango_with_django_project/templates/rango/about.html
@@ -10,6 +10,8 @@
     <div>
         here is the about page. <br />
         This tutorial has been put together by me
+        <br />
+        Visits: {{ visits }}
     </div>
     <div>
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
